--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,13 +1,13 @@
-version: '3'
-services:
-  app:
-    image: devops-test:latest
-    ports:
-      - "3000:3000"
-      - "22:22"
-    working_dir: /home/myuser/app
-    volumes:
-      - applogs:/home/myuser/app/logs
-volumes:
-  applogs:
-    driver: local
+# version: '3'
+# services:
+#   app:
+#     image: ubuntu:latest
+#     ports:
+#       - "3000:3000"
+#       - "22:22"
+#     working_dir: /home/myuser/app
+#     volumes:
+#       - applogs:/home/myuser/app/logs
+# volumes:
+#   applogs:
+#     driver: local
